# ...

./: .gitignore  README.md  main.py  pyproject.toml
app/: streamlit_app.py
docs/: ruff.md  start.md  todo
proto/: interview.proto
server/: grpc_server.py  interview_graph.py  test_client.py
