[project]
name = "pet02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.15",
    "streamlit>=1.58.0",
]
