[project]
name = "pet02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "generated",
    ".venv",
]

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]
ignore = [
    "ANN401",
]
